--- a/pacman/src/style.css
+++ b/pacman/src/style.css
@@ -32,3 +32,29 @@ background-color: yellow;
 border-radius: 10px;
 
 }
+
+.blinky{
+    background-color: red;
+    border: 0;
+}
+
+.pinky{
+    background-color: pink;
+    border: 0;
+}
+
+.inky{
+    background-color: cyan;
+    border: 0;
+}
+
+.clyde{
+    background-color: orange;
+    border: 0;
+}
+
+.scared-ghost{
+    background-color: aquamarine;
+    border: 0;
+}
+
